# acts

./: .zenodo.json  CITATION.cff  CMakeLists.txt
.github/workflows/: analysis.yml
Core/include/Acts/Digitization/: DigitizationModule.hpp
Core/include/Acts/Digitization/detail/: DoubleHitSpacePointBuilder.ipp.rej
Core/include/Acts/Propagator/: EigenStepper.hpp  MultiEigenStepperLoop.hpp  Propagator.ipp
Core/include/Acts/Propagator/detail/: PointwiseMaterialInteraction.hpp
Core/include/Acts/Seeding/: InternalSeed.hpp  Seed.hpp  SeedFilter.ipp  SeedFinderUtils.ipp  SpacePoint.hpp
Core/include/Acts/SpacePointFormation/: SpacePointBuilder.hpp  SpacePointBuilderConfig.h  SpacePointBuilderOptions.hpp
Core/include/Acts/SpacePointFormation/detail/: SpacePointBuilder.ipp
Core/include/Acts/TrackFitting/: GaussianSumFitter.hpp
Core/include/Acts/TrackFitting/detail/: GsfActor.hpp
Core/include/Acts/Utilities/: SpacePointUtility.cpp  SpacePointUtility.hpp
Core/include/Acts/Vertexing/: AdaptiveMultiVertexFinder.ipp
Core/src/Surfaces/: Surface.cpp
Core/src/Utilities/: CMakeLists.txt  SpacePointUtility.cpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Alignment/share/: alignment-geo-contextualDetector.json
Examples/Algorithms/Seeding/: CMakeLists.txt
Examples/Algorithms/Seeding/include/ACTFW/Seeding/: GenericDetectorCuts.hpp  SeedContainer.hpp  SeedingAlgorithm.hpp  SimSpacePoint.hpp  SpacePointFromHit.hpp
Examples/Algorithms/Seeding/include/ActsExamples/Seeding/: SeedContainer.hpp  SeedingAlgorithm.hpp  SimSpacePoint.hpp
Examples/Algorithms/Seeding/src/: SeedingAlgorithm.cpp
Examples/Algorithms/TrackFinding/: CMakeLists.txt
Examples/Algorithms/TrackFinding/include/ActsExamples/TrackFinding/: SeedingOptions.hpp  SpacePointMaker.hpp
Examples/Algorithms/TrackFinding/share/: geoSelection-genericDetector.json  geoSelection-openDataDetector.json
Examples/Algorithms/TrackFinding/src/: SeedingAlgorithm.cpp  SeedingOptions.cpp  SpacePointMaker.cpp  SpacePointMaker.cpp.rej  TrackParamsEstimationAlgorithm.cpp
Examples/Framework/include/ACTFW/EventData/: #SimSourceLink.hpp#
Examples/Framework/include/ActsExamples/EventData/: SimSpacePoint.hpp
Examples/Io/Csv/src/: CsvSpacePointReader.cpp  CsvSpacepointWriter.cpp
Examples/Io/Json/: CMakeLists.txt
Examples/Io/Json/include/ActsExamples/Io/Json/: JsonGeometryList.hpp  JsonSeedingConfig.hpp
Examples/Io/Json/src/: JsonGeometryList.cpp  JsonSeedingConfig.cpp
Examples/Io/Performance/: CMakeLists.txt
Examples/Io/Performance/ACTFW/Io/Performance/: SeedingPerformanceWriter.cpp  SeedingPerformanceWriter.hpp  TrackSeedingPerformanceWriter.cpp  TrackSeedingPerformanceWriter.hpp
Examples/Io/Performance/ActsExamples/Io/Performance/: SeedingPerformanceWriter.cpp  SeedingPerformanceWriter.hpp
Examples/Python/: CMakeLists.txt
Examples/Python/tests/: root_file_hashes.txt.rej
Examples/Run/: CMakeLists.txt
Examples/Run/Alignment/: ContextualAlignment.cpp
Examples/Run/Alignment/Common/: DetectorAlignment.hpp
Examples/Run/Common/: CMakeLists.txt
Examples/Run/Common/include/ACTFW/Seeding/: SeedingExampleBase.hpp
Examples/Run/Common/include/ActsExamples/Seeding/: SeedingExampleBase.hpp
Examples/Run/Common/src/: SeedingExampleBase.cpp
Examples/Run/Reconstruction/: CMakeLists.txt  TGeoRecCKFTracks.cpp
Examples/Run/Reconstruction/Common/: MeasurementsToSpacepoints.cpp  SeedingExample.cpp
Examples/Run/Seeding/: CMakeLists.txt  SeedingExample.cpp  TGeoSeedingExample.cpp
Examples/Run/Seeding/Common/: SeedingExample.cpp
Examples/Run/TestSeeding/: CMakeLists.txt  TestSeedAlgorithm.cpp  TestSeedAlgorithm.hpp  TestSeedRun.cpp
Examples/Scripts/Python/: ckf_itk.py  full_chain_itk.py
Plugins/: CMakeLists.txt
Tests/CommonHelpers/Acts/Tests/CommonHelpers/: CubicTrackingGeometry.hpp  DetectorElementStub.hpp  MeasurementsCreator.hpp  TestSourceLink.hpp  TestSpacePoint.hpp
Tests/UnitTests/Core/Digitization/: CMakeLists.txt
Tests/UnitTests/Core/SpacePointFormation/: CMakeLists.txt  SpacePointBuilderTests.cpp
docs/: getting_started.md
scripts/: ckf.sh  fatras.sh  gen_muon.sh  geoSelection-ITk.json  seed.sh
